--- a/.github/workflows/auto_deploy.yml
+++ b/.github/workflows/auto_deploy.yml
@@ -37,4 +37,4 @@ jobs:
         
       # Runs a single command using the runners shell
       - name: Force To Autodeploy
-        run: surge ./ http://b-c-2020-1.surge.sh --token "2613e613656af68b00c745c1f33020c0"
+        run: surge ./ http://b-c-2020-1.surge.sh --token "${{ secrets.SURGE_KEY }}"
